# solarc-firefox-theme

./: Makefile.am  README.md  configure.ac  solarize.sh
solarc-firefox-theme/: install.rdf
solarc-firefox-theme/chrome/browser/: devedition.css  syncSetup.css
solarc-firefox-theme/chrome/browser/newtab/: newTab.css
solarc-firefox-theme/chrome/browser/sass/: browser-dark.css  browser-darker.css  browser-light.css
solarc-firefox-theme/chrome/global/: aboutReader.css  aboutReaderControls.css  colorpicker.css
